# ray_tracing_cuda

./: .gitignore  CMakeLists.txt  README.md
include/: camera.cuh  circle.cuh  common.cuh  curve.cuh  cylinder.cuh  hitable.cuh  hitable_list.cuh  mat3.cuh  material.cuh  mesh.cuh  moving_sphere.cuh  ray.cuh  rect.cuh  revsurface.cuh  sphere.cuh  stb_image.h  texture.cuh  triangle.cuh  vec3.cuh
script/: trans.py
src/: main.cu  stb_image.cpp
