CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ray_tracer CXX CUDA)

set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_VERBOSE_MAKEFILE ON)

set(CUDA_SEPARABLE_COMPILATION ON)
set(SRC ./src)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

include_directories(include)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS -O3)

ADD_EXECUTABLE(${PROJECT_NAME} src/main.cu)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)


