CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ray_tracer CXX CUDA)

find_package(CUDA REQUIRED)

set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_VERBOSE_MAKEFILE ON)

# set(CUDA_SEPARABLE_COMPILATION ON)

include_directories(include)

SET(CMAKE_CXX_STANDARD 11)
# SET(CMAKE_CXX_FLAGS_)
SET(CMAKE_CXX_FLAGS "-g -O0")
# debug flags
SET(CMAKE_CXX_FLAGS_DEBUG "-g -G")
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-g;-G)

ADD_EXECUTABLE(${PROJECT_NAME} src/main.cu src/stb_image.cpp)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)


